--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>adoptopenjdk</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
     <packaging>hpi</packaging>
     <properties>
         <!-- Baseline Jenkins version you use to build the plugin. Users must have this version or newer to run. -->
@@ -119,7 +119,7 @@
         <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-      <tag>HEAD</tag>
+      <tag>adoptopenjdk-1.1</tag>
   </scm>
     <repositories>
         <repository>
