[JENKINS-59172] - Use GitHub as a source of the plugin's documentation on plugins.jenkins.io

--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
         </developer>
     </developers>
 
-    <url>https://wiki.jenkins.io/display/JENKINS/AdoptOpenJDK+installer+Plugin</url>
+    <url>https://github.com/jenkinsci/adoptopenjdk-plugin</url>
     <scm>
         <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
