--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>adoptopenjdk</artifactId>
-    <version>1.4-SNAPSHOT</version>
+    <version>1.4</version>
     <packaging>hpi</packaging>
     <properties>
         <java.level>8</java.level>
@@ -127,7 +127,7 @@
         <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-        <tag>HEAD</tag>
+        <tag>adoptopenjdk-1.4</tag>
     </scm>
 
     <repositories>
