--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,6 @@
     <packaging>hpi</packaging>
     <properties>
         <jenkins.version>2.303.1</jenkins.version>
-        <wiremock.version>2.33.1</wiremock.version>
     </properties>
     <name>AdoptOpenJDK installer Plugin</name>
     <description>Provides an installer for the JDK tool that downloads the JDK from https://adoptopenjdk.net/</description>
@@ -94,7 +93,7 @@
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock-jre8</artifactId>
-            <version>${wiremock.version}</version>
+            <version>2.33.1</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
