--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-.idea
-*.iml
 target
+
+# mvn hpi:run
 work
+
+# IntelliJ IDEA project files
+*.iml
+*.iws
+*.ipr
+.idea
+
+# Eclipse project files
+.settings
+.classpath
+.project
