--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>adoptopenjdk</artifactId>
-    <version>${revision}${changelist}</version>
+    <version>1.5</version>
     <packaging>hpi</packaging>
     <properties>
         <revision>1.5</revision>
@@ -86,7 +86,7 @@
         <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
         <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
         <url>https://github.com/${gitHubRepo}</url>
-        <tag>${scmTag}</tag>
+        <tag>adoptopenjdk-1.5</tag>
     </scm>
 
     <repositories>
