--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,10 @@
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>adoptopenjdk</artifactId>
-    <version>1.5</version>
+    <version>${revision}${changelist}</version>
     <packaging>hpi</packaging>
     <properties>
-        <revision>1.5</revision>
+        <revision>1.6</revision>
         <changelist>-SNAPSHOT</changelist>
         <jenkins.version>2.289.1</jenkins.version>
         <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
@@ -86,7 +86,7 @@
         <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
         <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
         <url>https://github.com/${gitHubRepo}</url>
-        <tag>adoptopenjdk-1.5</tag>
+        <tag>${scmTag}</tag>
     </scm>
 
     <repositories>
