--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
   </parent>
   <groupId>io.jenkins.plugins</groupId>
   <artifactId>adoptopenjdk</artifactId>
-  <version>${revision}${changelist}</version>
+  <version>1.6</version>
   <packaging>hpi</packaging>
   <name>Eclipse Temurin installer Plugin</name>
 
@@ -57,7 +57,7 @@
   <scm>
     <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
     <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
-    <tag>${scmTag}</tag>
+    <tag>adoptopenjdk-1.6</tag>
     <url>https://github.com/${gitHubRepo}</url>
   </scm>
 
