--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
   </parent>
   <groupId>io.jenkins.plugins</groupId>
   <artifactId>adoptopenjdk</artifactId>
-  <version>1.7</version>
+  <version>${revision}${changelist}</version>
   <packaging>hpi</packaging>
   <name>Eclipse Temurin installer Plugin</name>
 
@@ -49,12 +49,12 @@
   <scm>
     <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
     <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
-    <tag>adoptopenjdk-1.7</tag>
+    <tag>${scmTag}</tag>
     <url>https://github.com/${gitHubRepo}</url>
   </scm>
 
   <properties>
-    <revision>1.7</revision>
+    <revision>1.8</revision>
     <changelist>-SNAPSHOT</changelist>
     <!-- https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/ -->
     <jenkins.baseline>2.479</jenkins.baseline>
