--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
   </parent>
   <groupId>io.jenkins.plugins</groupId>
   <artifactId>adoptopenjdk</artifactId>
-  <version>${revision}${changelist}</version>
+  <version>${changelist}</version>
   <packaging>hpi</packaging>
   <name>Eclipse Temurin installer Plugin</name>
 
@@ -54,8 +54,7 @@
   </scm>
 
   <properties>
-    <revision>1.8</revision>
-    <changelist>-SNAPSHOT</changelist>
+    <changelist>999999-SNAPSHOT</changelist>
     <!-- https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/ -->
     <jenkins.baseline>2.479</jenkins.baseline>
     <jenkins.version>${jenkins.baseline}.3</jenkins.version>
@@ -68,7 +67,7 @@
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
         <artifactId>bom-${jenkins.baseline}.x</artifactId>
-        <version>4969.v6ffa_18d90c9f</version>
+        <version>5015.vb_52d36583443</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
